# archive-witness-db-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  append-time-of-day.py  cliff.toml  generate-video-description.py  requirements.txt
archive-wit-db/: Cargo.toml
archive-wit-db-utils/: Cargo.toml
archive-wit-db-utils/src/: editing.rs  images.rs  main.rs  releases.rs
archive-wit-db/migrations/: 20231223134333_releases.sql  20231223195419_content.sql  (+1 more)
archive-wit-youtube-db/: Cargo.toml
archive-wit-youtube-db/src/: error.rs  lib.rs  models.rs
db/: Cargo.toml
db-youtube/: Cargo.toml
db-youtube/src/: lib.rs
migrations/: 20231223134333_releases.sql  20231224144857_images.sql  20240102172209_nist_videos.sql  20240103164608_master_videos.sql  20240106161327_release_torrents.sql  20240428164939_videos.sql
resources/: master_form_completed  master_form_empty  master_form_with_empty_fields  master_template_completed  master_template_empty  master_template_with_empty_fields  video_form_empty  video_template_empty
src/: cumulus.rs  db.rs  error.rs  helpers.rs  images.rs  lib.rs  main.rs  models.rs  releases.rs  schema.rs  static_data.rs
tools/: Cargo.toml
tools/src/: editing.rs  helpers.rs  images.rs  main.rs  releases.rs  static_data.rs
tools/src/cmd/: cumulus.rs  master_videos.rs  mod.rs  news_affiliates.rs  news_broadcasts.rs  news_networks.rs  nist_import.rs  nist_tapes.rs  nist_videos.rs  releases.rs  videos.rs
tools/src/editing/: fields.rs  forms.rs  masters.rs  mod.rs  news.rs  nist_tapes.rs  nist_videos.rs  tests.rs  videos.rs
(+23 files in other folders)
