[package]
name = "archive-wit-youtube-db"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
dotenvy = "0.15"
sqlx = { version = "0.7.3", features = [ "chrono", "runtime-tokio", "sqlite", "time"] }
thiserror = "1.0.23"
tokio = { version = "1.26", features = ["full"] }
url = "2.4.1"
uuid = "1.6.1"
